--- a/diplom.bib
+++ b/diplom.bib
@@ -243,7 +243,7 @@
 }
 
 % Markus: SQL Injections
-@online{sqlinjection,
+@online{sqlinjections,
 	lastchecked = {2016-11-03},
 	url = {https://www.owasp.org/index.php/SQL_Injection},
 	title = {SQL Injection}
@@ -551,4 +551,3 @@
 	url = {http://www.uniturm.de/download/getdownloadfile?id=40022&type=dl},
 	title = {Spannungsverteilung bei verschiedenen Kerbformen},
 }
-
