--- a/Marketing.tex
+++ b/Marketing.tex
@@ -9,14 +9,14 @@ das Projekt Hovering Steward vermarktet wird. Unter Anderem werden diverse Markt
 aber auch Marketing-Strategien und deren Anwendung erläutert.
 
   \subsection{Marktanalysen}
-  \textbf{SWOT-Analyse}
+  \subsection*{SWOT-Analyse}
   Mithilfe der SWOT-Analyse wird der aktuelle Zustand eines Unternehmens, oder in unserem Fall Projektes, analysiert um anschließend eine von vier möglichen Strategien
   für den weiteren Verlauf des Unternehmens zu erarbeiten. Es werden Stärken, Schwächen, Möglichkeiten und Risiken evaluiert, wobei sich jeweils Stärken \& Schwächen, und
   Möglichkeiten \& Risiken gegenüberstehen. Die vier Begriffe auf englisch übersetzt Strengths, Weaknesses, Opportunities und Risks ergeben dadurch das Akronym SWOT.
 
   \textcolor{red}{(BILD Analyse)}
 
-  \textbf{Die vier Strategien:}
+  \subsection*{Die vier Strategien:}
   \begin{itemize}
     \item \textbf{SO-Strategie}
     Die Stärken des Unternehmens werden hervorgehoben und mit den Möglichkeiten verknüpft. Macht ein Unternehmen beispielsweise hohe Umsätze in Industrieländern und hat
@@ -35,7 +35,7 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     sein, wenn das Unternehmen sich auf dem Markt schwer über Wasser halten kann.
   \end{itemize}
 
-  \textbf{Portfolioanalyse nach Boston Consulting Group}
+  \subsection*{Portfolioanalyse nach Boston Consulting Group}
   Die Definition laut {"Boston Consulting Group"\cite{portfolioanalyse}} beschreibt die Portfolioanalyse wie folgt:
   "Das BCG-Portfolio erlaubt eine Bewertung strategisch relevanter Geschäftseinheiten auf Basis zukünftiger Gewinnchancen (Marktwachstum) und der
   gegenwärtigen Wettbewerbsposition (relativer Marktanteil)." Anders gesagt: Diese Analyse hilft dabei Teile eines Unternehmens wie Produkte oder Dienstleistungen
@@ -90,16 +90,16 @@ aber auch Marketing-Strategien und deren Anwendung erläutert.
     Folgende Vorteile haben uns dazu motiviert, uns bei diesen zu bewerben:
 
     \begin{itemize}
-      \item Teamdynamik\\
+      \item \textbf{Teamdynamik}
       Bei einer Präsentation vor fremdem Publikum war ein professionelles Auftreten, gute Planung und vorallem Koordination gefragt.
       Wir haben diese Auftritte als Chancen genutzt, uns sowohl gemeinsam als Team weiterzuentwickeln, als auch unsere Präsentationstechnik für
       die Endpräsentation zu trainieren.
 
-      \item Unterstützung\\
+      \item \textbf{Unterstützung}
       Ein weiterer Vorteil war, dass wir durch die Teilnahme an Wettbewerben von den veranstaltenden Unternehmen Unterstützung, nicht nur im finanziellen
       Bereich, sondern auch durch Workshops oder ähnlichen hilfreichen Events erhielten.
 
-      \item Marketing\\
+      \item \textbf{Marketing}
       Nicht zuletzt waren Wettbewerbe ein wichtiger Teil des Marketings, da wir nicht nur durch Präsentationen unsere Idee verbreiten konnten,
       sondern auch in den Social Media Kanälen und auf den Webseiten der Veranstalter erwähnt wurden.
     \end{itemize}
@@ -176,13 +176,13 @@ behandelt.
     die JavaScript Bibliothek jQuery und das CSS Framework Bootstrap verwendet. Im Folgenden werden diese Technologien näher beschrieben und die daraus
     ersichtlichen Vorteile, die zu Verwendung in diesem Projekt geführt haben, erläutert.
 
-    \textbf{HTML}
+    \subsection*{HTML}
     {Die Hyper Text Markup Language\cite{html}} ist die gängigste Sprache um die Struktur einer Website zu definieren. Sie ist Plattformunabhängig, was bedeutet,
     dass sie unabhängig vom Betriebsystem eines Geräts interpretiert werden kann. Die Syntax von HTML besteht aus sogenannten Tags, die, nach einem
     bestimmten Schema aufgebaut, die Struktur einer Website ergeben. Die aktuellste Version ist HTML 5. Diese unterstützt zum Einen das responsive
     Entwickeln einer Website, und verbessert zum Anderen die SEO. Außerdem ist es möglich ohne der Verwendung von Adobe Flash Player Audio und Video einzubinden.
 
-    \textbf{JavaScript}
+    \subsection*{JavaScript}
     {JavaScript\cite{javascript}} ist eine webbasierende Programmiersprache. Sie ist objektorientiert, was bedeutet, dass eigene Funktionen und Klassen geschrieben, und wiederverwendet
     werden können. Die Sprache wird genutzt um Vorgänge wie Berechnungen oder Animationen auf einer Website im Hintergrund durchzuführen. Oft sind diese mit Interaktion
     des Nutzers verbunden. JavaScript greift hierfür auf das Document Object Model des HTML-Dokumtens zu, um Elemente und Knoten in diesem hinzuzufügen, zu löschen, oder
@@ -199,7 +199,7 @@ behandelt.
     Beispiel: jQuery:
     \textcolor{red}{(CODE jQUery)}
 
-    \textbf{CSS}
+    \subsection*{CSS}
     {CSS\cite{css}} steht für Cascading Style Sheets. Wie die Bezeichnung durch das Wort Style schon sagt wird sie für das visuelle Aufbereiten einer Website verwendet.
     Allgemein ist CSS eine Auszeichnungssprache für Dokumente mit strukturierten Inhalten wie HTML. In HTML werden dafür den DOM-Elementen Klassen oder IDs
     zugewiesen, über die CSS dann beliegige Eigenschaften zuweisen kann. Dabei orientiert sich CSS nach dem sogenannten Box-Modell. In diesem werden HTML-Elemente
@@ -216,32 +216,32 @@ behandelt.
     Das Backend setzt sich ausschließlich aus dem Framework CodeIgniter zusammen, welches auf der Serverseitigen Scriptsprache PHP basiert. Für die Datenspeicherung
     wurde eine MySQL-Datenbank verwendet.
 
-    \textbf{Code}
-    \textbf{PHP}
+    \subsection*{Code}
+    \subsection*{PHP}
     {PHP\cite{php} ist genau wie JavaScript eine Open-Source Scriptsprache, mit dem großen Unterschied, dass der Code nicht auf dem Client, sondern auf dem Server ausgeführt wird,
     und im Anschluss für den Client lesbares HTML generiert. Dies bietet den großen Vorteil, dass für den Client nicht ersichtlich ist, was im Hintergrund an PHP Code ausgeführt
     wird. Um PHP zu programmieren wird allerdings ein Webserver mit einer PHP-Installation benötigt.
 
-    \textbf{Ruby}
+    \subsection*{Ruby}
     {Ruby\cite{ruby}} ist eine gängie Alternative zu PHP. Neben syntaktischen Vorteilen gegnüber PHP stellt Ruby eine ScriptSprache für einen allgemeineren Gebrauch,
     also andere Anwendungsgebiete als die Webentwicklung dar. Das auf Ruby basierende Framework "Ruby on Rails" ist ein beliebtes Werkzeg für den Bereich der Webentwicklung.
     Da Ruby jedoch noch keinen so hohen Bekanntheitsgrad wie PHP hat, gibt es weniger ausführlichere Dokumentationen, weswegen PHP als die sinnvollere Variante erschien.
     Außerdem ist die Überlegung von PHP auf Ruby umzusteigen damit verbunden, einen geeigneten Webhoster zu finden, welcher über eine Ruby Installation auf dem Server verfügt.
 
-    \textbf{Perl}
+    \subsection*{Perl}
     {Perl\cite{perl}} ist ähnlich wie Ruby eine Scriptsprache für vielseitige Nutzung wie Systemadministration, Netzwerkprogrammierung, aber auch Webentwicklung, was sie
     zu einer weiteren Alternative zu PHP macht. Neben dem Vorteil der Plattformunabhängigkeit ist Perl mit den Sprachen HTML und MySQL kompatibel. Beide dieser Sprachen stellen
     einen wichtigen Bestandteil des Blogs dar. Da Perl jedoch im Vergleich zu PHP nicht ausschließlich für die Entwicklung von Webanwendungen vorgesehen ist, sind
     Methodenaufrufe oft viel komplexer, was einen höheren Aufwand bei der Programmierung bedeutet.
 
-    \textbf{Datenbank}
-    \textbf{MySQL}
+    \subsection*{Datenbank}
+    \subsection*{MySQL}
     MySQL ist ein weit verbreitetes relationales Datenbanksystem, das auf SQL basiert. SQL steht für "Structured Query Language" und bezeichnet eine Abfragesprache für Datenbanken.
     Sie wird verwendet um Daten in eine Datenbank hinzuzufügen, diese zu ändern oder zu löschen. MySQL stellt eine wichtige Schnittstelle zwischen zwei gängigen Sprachen für
     die Enticklung dynamischer Websites zu Verfügung indem sie es ermöglicht, diese Abfragen mit der Scriptsprache PHP durchzuführen. Ein hilfreiches Verwaltungstool ist phpMyAdmin,
     eine in PHP entwickelte Anwendung, die die Verwaltung der MySQL Datenbank über eine grafische Oberfläche vereinfacht.
 
-    \textbf{MongoDB}
+    \subsection*{MongoDB}
     Anders als MySQL ist {MongoDB\cite{mongodb}} eine NoSQL Datenbank. Der Unterschied liegt darin, dass die Datenbank nicht relational ist. Statt einem konkreten Schema von Tabellen
     wird hier mit sogenannten Dokumenten und Sammlungen gearbeitet. Ein Dokument speichert Daten, nach dem "Key-Value" Prinzip, eine Sammlung enthält mehrere Dokumente.
     Den wesentlichsten Vorteil weist MongoDB in der dynamischen Gestaltung der Datenbank auf. Die Strukturen in Sammlungen können demnach unterschiedlich sein. Die
@@ -308,7 +308,7 @@ behandelt.
     ...
 
     \subsubsection{Herausforderungen und Lösungen}
-    \textbf{Sicherheit}
+    \subsection*{Sicherheit}
     Zwei der größten Sicherheitslücken bei Webanwendungen sind zum Einen {"Cross-Side-Scripting"\cite{xss}} und zum Anderen {"SQL-Injections"\cite{sqlinjections}}.
 
     Unter Cross-Side-Scripting, kurz genannt XSS versteht man die Injizierung von schadhaftem Code in eine Webapplikation über eine Schnittstelle, zu der ein User
@@ -318,11 +318,11 @@ behandelt.
 
     Der Beste Weg XSS zu unterbinden ist, die Eingaben, die über ein Formular vom User an den Server gesendet werden über PHP zu validieren und notfalls, Zeichen, die
     XSS andeuten zu ersetzen. PHP stellt dafür die Methode htmlspecialchars() zur Verfügung. Sie konvertiert bestimmte Sonderzeichen in HTML-Code. Beispielsweise wird
-    das Zeichen "\<", welches notwendig ist um Javascript mittels <script>-Tag zu schreiben durch "&lt;".
+    das Zeichen <, welches notwendig ist um Javascript mittels <script>-Tag zu schreiben durch "\&lt;".
 
     Bei einer SQL-Injection hingegen injiziert ein User SQL-Statements in eine Anwedungung um somit Daten aus der Datenbank auszulesen, oder diese zu manipulieren.
     Wird SQL Code dynamisch und mittels User Eingaben generiert, kann der User diese Statements manipulieren. Werden über ein Formular
-    geschickte Daten per "$\_POST['name'];" direkt in ein SQL Statement übernommen, ohne auf korrekte Zeicheneingabe, Länge des Strings oder Ähnliches validiert wird,
+    geschickte Daten per "\$\_POST['name'];" direkt in ein SQL Statement übernommen, ohne auf korrekte Zeicheneingabe, Länge des Strings oder Ähnliches validiert wird,
     können Fehler entstehen, die Schaden an der Datenbank anrichten.
 
     Eine Möglichkeit eine SQL Injection zu verhindern ist, ähnlich wie bei XSS bestimmte Zeichen zu erkennen und stattdessen als Strings weiterzuverwenden.
@@ -330,7 +330,7 @@ behandelt.
     Mit der PHP Methode mysql\_real\_escape\_string() wird vor jedes Zeichen wie zum Beispiel ein ' ein \textbackslash geschrieben, womit dieses zu einem ganz normalen
     String Ausdruck wird, und damit ungefährlich ist.
 
-    \textbf{Responsive Design}\\
+    \subsection*{Responsive Design}
     Für die responsive Gestaltung des Blogs wurde zwar das Framework Bootstrap zur Hilfe gezogen, da der Aufbau der Website jedoch aus eigener Hand
     entstanden ist, und kein Template verwendet wurde, musste für vollständige Kompatibilität auf mobilen Geräten manuell mit CSS gearbeitet werden.
     Mittels Media-Queries lassen sich CSS-Eigenschaften so definieren, dass sie ab gewissen Bildschirmgrößen aktiv werden. Für die Bildschirmbreiten 1200, 992, 767 und 480
@@ -338,7 +338,7 @@ behandelt.
     Desktop und Large Desktop.
 
   \subsection{Eigene Erfahrungen}
-  \textbf{Wahl des Frameworks}
+  \subsection*{Wahl des Frameworks}
   Die Recherche ergab, dass mehrere, unterschiedlich umfangreiche PHP Frameworks für den Blog geeignet wären. Da nicht genug Zeit war jedes testweise zu Installieren und
   sich mit den Basics auseinanderzusetzen, habe ich mich an Rezensionen von NutzerInnen dieser Frameworks orientiert. CodeIgniter stellte sich als optimales Framework für
   die Entwicklung einer Webanwendung dieser Größe heraus. Es bietet zahlreiche Bibliotheken, die über sehr simple Einbindung die Funktionalitäten erweitern. Syntaktisch ist
@@ -350,7 +350,7 @@ behandelt.
 
   \subsection{Wettbewerbe, Events, Präsentationen}
 
-    \textbf{Jugend Innovativ}\\
+    \subsection*{Jugend Innovativ}
     JugendInnovativ ist einer der bekanntesten Bewerbe, die Schul- und Diplomarbeitsprojekte
     unterstützten. Wie der Name schon sagt, legt die Jury hierbei sehr großen Wert auf den innovativen
     Aspekt der Projektidee. Zu diesem Zweck haben wir eine eigene Executive Summary verfasst, die nicht
@@ -358,12 +358,12 @@ behandelt.
     macht. Unser Team hat das Halbfinale von JugendInnovativ erreicht, und somit eine finanzielle Unterstützung
     zugesagt bekommen.
 
-    \textbf{Bosch - Technik fürs Leben Preis}\\
+    \subsection*{Bosch - Technik fürs Leben Preis}
     Die Bosch-Gruppe Österreich ist Initiator des jährlichen Wettbewerbs "Technik fürs Leben". Es werden Österreichs
     größte Talente des technisch orientierten Nachwuchses gesucht. Projekte werden von einer Experten-Jury bewertet,
     der Hauptpreis is der Angebot für ein Praktikum bei der Bosch Gruppe Österreich.
 
-  \textbf{Accenture HTL Challenge}\\
+    \subsection*{Accenture HTL Challenge}
     Der Managementberatungs-, Technologie- und Outsourcing Dienstleister {Accenture\cite{accenture}} veranstalten jedes Jahr die Accenture HTL Challenge,
     bei der Projekte und Diplomarbeiten von technischen Schulen, rund um das Thema Informationstechnologie gesucht werden.
     Die Teams treten durch Präsentationen vor einer Jury gegeneinander an. Neben dem Wettbewerb werden den Teilnehmer außerdem
@@ -371,12 +371,12 @@ behandelt.
     um das Projekt auch hier an die Öffentlichkeit zu bringen und bei Gelegenheit Kontakte zu knüpfen. Hovering Steward schaffte es ins Halbfinale der
     Accenture HTL Challenge.
 
-  \textbf{Invasion der Drohnen}\\
+    \subsection*{Invasion der Drohnen}
     Zu Begin der Diplomarbeit haben wir versucht möglichst viel Über die Entwicklung und den Einsatz von Drohnen zu erfahren.
     Der Vortrag {Invasion der Drohnen\cite{invasionderdrohnen}}, mit anschließender Diskussion zum Thema "Entwicklung von Drohnen, Einsatzgebiete und rechtliche Einschränkungen" brachte
     uns viele neue Informationen, wie der Umgang mit unbemannten Flugobjekten, speziell in Österreich gehandhabt werden.
 
-    \textbf{European Conference on Educational Robotics}\\
+    \subsection*{European Conference on Educational Robotics}
     Über den Wettbewerb Accenture sind wir mit dem Leiter des {European Conference on Educational Robotics\cite{ecer}} in Kontakt geraten.
     "Die European Conference on Educational Robotics (ECER) ist eine internationale wissenschaftliche Konferenz für SchülerInnen. WissenschaftlerInnen
     geben mit Vorträgen Einblick in ihre Forschung, führen Roboter live vor und sind Punkterichter bei spannenden Robotik-Bewerben, darunter die
