rechtschreib / formale fehler ausbessern :3

--- a/Firmware.tex
+++ b/Firmware.tex
@@ -21,10 +21,11 @@
   Das Admin Interface und der Server stehen ebenfalls in der Küche, über diese Komponenten bekommt der Hexacopter Befehle. Die Routen sind im Admin Interface hinterlegt.
 
   \textbf{Weg}\\
-  Der Weg besteht aus sich abwechselnden 2 farbigen Codes. Die Teile zwischen Tischen und Kreuzungen, werden als Wegabschnitt bezeichnet.
+  Der Weg besteht aus sich abwechselnden 2 farbigen Codes. Die Teile zwischen Tischen und Kreuzungen, werden als Wegabschnitt bezeichnet. Die ColorCodes müssen von jedem Restaurant eigenständig eingescannt und die Routen zu den jeweiligen Tisch in das Admin Interface eingetragen werden.
 
   \textbf{Tisch}\\
-  Auf einem Tisch befindet sich, wie in der Küche eine Plattform, die mit einem Farbcode versehen ist. Hier landet der Hexacopter, wartet 30 Sekunden lang und fliegt danach den Weg zurück zu seiner Base. In den 30 Sekunden soll der Cupcake entnommen werden. Weiters befindet sich ein iPad auf jedem Tisch. Durch dieses enthält jeder Tisch seine eigene ID und dazugehörige Route. Bestellungen können somit einem Tisch zugewiesen werden.
+  Auf einem Tisch befindet sich, wie in der Küche eine Plattform, die mit einem Farbcode versehen ist. Hier landet der Hexacopter, wartet 30 Sekunden lang und fliegt danach den Weg zurück zu seiner Base. In den 30 Sekunden soll der Cupcake entnommen werden. Weiters befindet sich ein iPad auf jedem Tisch. Durch dieses enthält jeder Tisch seine eigene ID und dazugehörige Route. Bestellungen können somit einem Tisch zugewiesen werden. 
+  Die Tische können wie in jedem normalen Restaurant beliebig platziert werden, da der Hexacopter durch die Rotation der Farbobjekte auch Kurven fliegen kann. Dabei darf ein Teil des Tisches nicht besetzt sein, da der Hexacopter nicht über Menschen fliegen soll.
 
   % Bild vom Ablauf %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -53,8 +54,6 @@
 
     \subsubsection{Frames}
 
-    Ein Frame hat die Größe von xxx
-
     Ein Frame entsteht bei jeder Messung der Pixy CMUcam5. Der Frame hat eine Breite von 319 und eine Höhe von 199 Pixel. Die Koordinate (0/0) befindet sich in der linken oberen Ecke.
 
     Bild 1 beschreibt den alten Frame, Bild 2 den aktuellen. Die Position des Objektes, beschreibt die zentralen x und y Positionen des Frames. Die Differenz entsteht aus den Positionen des Objektes im alten und neuem Frame. Das Objekt soll in den Bereich zwischen X\_MIN und X\_MAX, beziehungsweise Y\_MIN und Y\_MAX gelangen.
@@ -62,51 +61,46 @@
     % BILD VON LUCAS %
 
     \subsubsection{Aileron}
-
-    Die Beschleunigung auf die Seiten links und Rechts
-
-    Anhand des aktuell getrackte Colorcodes werden die Seiten links und rechts korrigiert.
+    Anhand des aktuell getrackte Colorcodes werden die Seiten links und rechts korrigiert. Solange sich der Hexacopter nicht im angegeben Bereich befindet, wird die Fluggeschwindigkeit in die jeweilige Richtung erhöht.
 
     \subsubsection{Elevator}
-    Vorwärts- und Rückwärtsbewegung: Die Vorwärtsbewegung muss auf einer konstanten Position gehalten werden. Beim Endpunkt wird die Geschwindigkeit der Vorwärtsbewegung auf 0 gesetzt werden. Im Idealfall muss eine Rückwärtsbewegung gar nicht durchgeführt werden, nur, wenn der Multicopter über das Ziel hinausschießt.
+    Die Vorwärtsbewegung muss auf einer konstanten Position gehalten werden. Beim Endpunkt wird die Geschwindigkeit der Vorwärtsbewegung gesenkt. Im Idealfall muss die Rückwärtsbewegung gar nicht durchgeführt werden, nur, wenn der Multicopter über das Ziel hinausschießt oder keinen nächsten Farbcode findet.
 
-    \textbf{Das Weiterschalten auf den nächsten Bodenmarker}\\
+    \subsection*{Das Weiterschalten auf den nächsten Bodenmarker}
     Der Algorithmus zielt immer auf den Marker, der sich am nächsten zum Nullpunkt an der y-Achse befindet. Er trackt den Ersten, bis er den zweiten erkennt, diesen verfolgt er wieder, danach kommt der dritte dran, diese Routine läuft, bis der letzte Colorcode erreicht ist. Welcher Marker der Zielmarker ist, wird durch die größe eines Arrays erkannt. Dieses wird mit den Daten, die im Admin-Interface hinterlegt sind und im Endeffekt vom Wlan-Modul empfangen werden, befüllt.
 
     \subsubsection{Rudder}
-
-    Mithilfe der Rudder Funktion muss der Winkel auf die aktuelle Positionsmarkierung ausgerichtet werden.
+    Mithilfe der Rudder Funktion muss der Winkel auf die aktuelle Positionsmarkierung ausgerichtet werden. Dabei ist eine ungenauigkeit von 5 Porzent in beide Richtungen erlaubt.
 
     \subsection*{Darstellung negativer Zahlen im Binärsytem}
-
     Für die Rotation werden die Grundlagen negativer binärer Zahlen benötigt.
 
-    \textbf{Binäre Zahlen ohne Vorzeichen}\\
-    0000 0000 = 0, 1111 1111 = 255
-    \textbf{Binäre Zahl mit Vorzeichen}\\
-    Ein Bit wird für das Vorzeichen verwendet.
-    0000 0001 = 1 -> 1000 0001 = -1,
-    0111 1111 = 127 -> 1111 1111 = -127
-    \textbf{Einerkomplement}\\
-    Beim Invertieren aller Bits entsteht eine negative Zahl
-    0000 0000 = "+0" -> 1111 1111 = "-0"
+    \subsection*{Binäre Zahlen ohne Vorzeichen}
+    0000 0000 = 0, 1111 1111 = 255 
+    \subsection*{Binäre Zahl mit Vorzeichen}
+    Ein Bit wird für das Vorzeichen verwendet. //
+    0000 0001 = 1 -> 1000 0001 = -1, //
+    0111 1111 = 127 -> 1111 1111 = -127 
+    \subsection*{Einerkomplement}
+    Beim Invertieren aller Bits entsteht eine negative Zahl //
+    0000 0000 = "+0" -> 1111 1111 = "-0" //
     0111 1111 = 127 -> 1000 0000 = -127
-    \textbf{Zweierkomplement}
-    0000 0001 = 1 -> 1111 1111 = -1
-    0000 0010 = 2 -> 1111 1110 = -2
-    0111 1111 = 127 -> 1000 0001 = -127
-    \textbf{Bilden des Zweierkomplements}
-    Beispiel: 0111 1111 = 127
-    Die Binäre Zahl wird invertiert (1000 0000) und mit 1 addiert.
-    Das Ergebins lautet: 1000 0001 = -127
-    Beispiel: 1000 0000 = 128 (im Komplement)
-    Die binäre Zahl wird mit 1 subtrahiert (0111 1111) und danach invertiert.
-    Das Ergebnis lautet: 1000 0000 = 128 = -128
+    \subsection*{Zweierkomplement}
+    0000 0001 = 1 -> 1111 1111 = -1 //
+    0000 0010 = 2 -> 1111 1110 = -2 //
+    0111 1111 = 127 -> 1000 0001 = -127 
+    \subsection*{Bilden des Zweierkomplements}
+    \textbf{Beispiel:} 0111 1111 = 127 //
+    Die Binäre Zahl wird invertiert (1000 0000) und mit 1 addiert. //
+    Das Ergebins lautet: 1000 0001 = -127 //
+    \textbf{Beispiel:} 1000 0000 = 128 (im Komplement) //
+    Die binäre Zahl wird mit 1 subtrahiert (0111 1111) und danach invertiert. //
+    Das Ergebnis lautet: 1000 0000 = 128 = -128 //
 
     % Bild von Rotation %
 
     \subsubsection{Throttle}
-    Über den Ultraschallsensor erfährt der Hexacopter, wie hoch er fliegt, wenn er seine maximale Flughöhe erreicht hat, soll er seine Antriebskraft nicht weiter erhöhen. Dadurch korrigiert er seine Höhe bei jedem Aufruf der Funktion und eine Änderung des Gewichts, wird ausgeglichen. Der entnommene Cupcake am jeweiligen Tisch soll daher keine Probleme erschaffen.
+    Über den Ultraschallsensor erfährt der Hexacopter, wie hoch er fliegt, wenn er seine maximale Flughöhe erreicht hat, soll er seine Antriebskraft nicht weiter erhöhen. Dadurch korrigiert er seine Höhe bei jedem Aufruf der Funktion und eine Änderung des Gewichts, wird ausgeglichen. Der entnommene Cupcake und die damit verbundene Gewichtsveränderung stellt daher kein Problem dar.
 
   \subsection{Umsetzung}
 
@@ -136,7 +130,7 @@
     Die Position wird anhand solcher Farbcodes erkannt, im Tischkonzept ist hinterlegt in welcher Reihenfolge der Hexacopter die Farbcodes suchen muss.
     Er fliegt anschließend so lange, bis er über dem aktuellen Farbcode ist, dieser also mittig im Bild ist und sucht darauf den nächsten.
 
-    \textbf{Überprüfen von Aileron}\\
+    \subsection*{Überprüfen von Aileron}
     Beim Vergleichen von Aileron wird die Veränderung an der x-Achse überprüft.
 
     Durch diese Funktion soll der Hexacopter mithilfe der Pixy-Daten, den Colorcode in der Mitte des Frames plazieren. An der x-Achse sind Werte zwischen 150 und 170 optimal. Der übergebene Wert ist dabei der Mittelpunkt des Colorcodes.
@@ -147,7 +141,7 @@
     Anderenfalls fliegt der Hexacopter auf die falsche Seite. Die Firmware reagiert darauf mit der Änderung der Pulszeit am Aileron-Pin.
     Bei der Bewegung in die richtige Richtung wird der Wert so lange in diese gesteuert, bis sich die Geschwindigkeit, gemessen in den veränderten Pixel zwischen zwei Frames, zwischen 2 Konstanten Werten befindet.
 
-    \textbf{Überprüfen von Elevator}\\
+    \subsection*{Überprüfen von Elevator}
     Elevator, die Bewegung an der y-Achse, also die Bewegung nach vorne und nach hinten, funktioniert nach dem selben Prinzip wie Aileron.
 
     Zuerst wird kontrolliert, ob sich der Farbcode im gewünschten Bereich befindet, in diesem Fall zwischen 90 und 110.
@@ -156,7 +150,7 @@
 
     Wie bei der Überprüfung von Aileron, gibt es auch hier zwei Konstante Werte, zwischen denen sich die Geschwindigkeit befinden soll, solange die Position optimiert wird.
 
-    \textbf{Überprüfen von Rudder}\\
+    \subsection*{Überprüfen von Rudder}
     Rudder beschreibt die Rotation um seine eigene Hochachse. Dafür wird zunächst unterschieden, ob sich der Hexacopter am hin- oder rückflug befindet, da die Rotation der Colorcodes beim Rückflug um 180 Grad gedreht werden muss.
 
     Die optimale Rotation befindet sich beim Hinflug zwischen -5 und 5 Grad.
@@ -191,7 +185,7 @@
     \subsubsection{Speichern der alten Daten}
     Die alten Daten werden gespeichert, um die Differenzen von zwei Frames zu errechnen. Der Frame mit Index 0, ist der aktuelle Frame, der Frame mit dem Index 1, der alte. Bei jedem durchlauf, werden die Werte aktualisiert.
 
-    \subsubsection{Ausgabe der Steuersignal}
+    \subsubsection{Ausgabe der Steuersignal Lucas}
     Nachdem die Steuersignale berechnet und korrigiert wurden müssen diese an den Hexacopter ausgegeben werden. Dies muss periodisch alle $\SI{20}{\milli\second}$ geschehen.
     Der Flightcontroller erkennt jeweils die einzelnen Impulse und steuert die Rotoren entsprechend an.
 
@@ -255,12 +249,15 @@ Beim Konzept Sicherheitsmaßnahmen geht es grundsätzlich um die Sicherheit von 
 
   \subsection{Umsetzung}
 
-A: Auftreten
-B: Bedeutung
-E: Entdeckung
-RPZ: Risiko-Prioritätszahl = A * B * E
+    Legende:
+    \begin{itemize}
+    \item A: Auftreten
+    \item B: Bedeutung
+    \item E: Entdeckung
+    \item RPZ: Risiko-Prioritätszahl = A * B * E
+    \end{itemze}
 
-Die Werte beziehen sich auf den Fehler, die obere Analyse beschreibt das Auftreten, die Bedeutung und die Entdeckung vor den Maßnahmen, die unteren danach.
+    Die Werte beziehen sich auf den Fehler, die obere Analyse beschreibt das Auftreten, die Bedeutung und die Entdeckung vor den Maßnahmen, die unteren danach.
 
 %\begin{table}[H]
 %\centering
@@ -341,5 +338,5 @@ Das Konzept Systemausfall beschreibt die Maßnahmen, wenn der Hexacopter seine A
 \end{itemize}
 
 \subsection*{Was passiert nach einem Systemausfall?}
-Wenn der Hexacopter seinen Fehler selbst korrigieren kann, fliegt er weiter.
+Wenn der Hexacopter seinen Fehler selbst korrigieren kann, fliegt er seine Route weiter.
 Anderenfalls geht der Hexacopter, sobald er gelandet ist oder manuell gesteuert wurde, davon aus, beim nächsten Start in seiner Base zu stehen. Der Cupcake wird wieder in der Bestellliste angezeigt und muss erneut ausgeliefert werden. Je nach Fehler, wird ein Code über den Display ausgegeben, der bei der Fehlersuche helfen soll.
