--- a/Allgemeines.tex
+++ b/Allgemeines.tex
@@ -116,7 +116,7 @@ Betriebs und wandelt Nutzereingaben in Befehle für den Muticopter um.
   Neben der Planung der Datenbank und der sinnvollen Verwendung hilfreicher Frameworks entwickelte sie außerdem eine Java Applikation,
   die die Kommunikation zwischen der Speisekarte und der Drohne regelte.
 
-  \subsection*{Alexander Punz}\\
+  \subsection*{Alexander Punz}
   \textbf{Hardware \& Mechanik}
 
   Alexander Punz war sowohl für die Hardware als auch für die Mechanik verantwortlich. Seine Aufgaben waren sowohl die Konzeption
