--- a/Digitale_Speisekarte.tex
+++ b/Digitale_Speisekarte.tex
@@ -425,7 +425,7 @@ Ursprünglich war geplant, dass der Gast sich bevor ihm die einzelnen Speisen an
 			\end{figure}\textbf{Admininterface}\\
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 1\textwidth]{Bilder/Jok_alte_mockups_admin.jpg}
+			\includegraphics[width = 1\textwidth]{Bilder/Jok_alte_mockups_admin}
 			\par\end{centering}
 			\caption{alte MockUps - Admininterface}
 			\label{alte MockUps}
@@ -442,7 +442,7 @@ Ursprünglich war geplant, dass der Gast sich bevor ihm die einzelnen Speisen an
 			\end{figure}\textbf{Admininterface}\\
 			\begin{figure}[H]
 			\begin{centering}
-			\includegraphics[width = 1\textwidth]{Bilder/Jok_neue_mockups_admin.png}
+			\includegraphics[width = 1\textwidth]{Bilder/Jok_neue_mockups_admin}
 			\par\end{centering}
 			\caption{neue MockUps - Admininterface}
 			\label{neue MockUps - Admininterface}
