--- a/Firmware.tex
+++ b/Firmware.tex
@@ -255,7 +255,7 @@ Beim Konzept Sicherheitsmaßnahmen geht es grundsätzlich um die Sicherheit von 
     \item B: Bedeutung
     \item E: Entdeckung
     \item RPZ: Risiko-Prioritätszahl = A * B * E
-    \end{itemze}
+    \end{itemize}
 
     Die Werte beziehen sich auf den Fehler, die obere Analyse beschreibt das Auftreten, die Bedeutung und die Entdeckung vor den Maßnahmen, die unteren danach.
 
